# Anisense

./: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
api-layer/: .env.example  composer.json
api-layer/app/Console/: Kernel.php
api-layer/app/Http/: Kernel.php
api-layer/app/Jobs/: UpdateAnimeJob.php  UpdateGenresJob.php
api-layer/app/Models/: Anime.php  Genre.php  User.php
api-layer/app/Services/: AnimeService.php  GenreService.php  UserService.php
api-layer/database/migrations/: 2023_07_12_005704_create_animes_table.php  2023_07_12_010123_add_top_anime_to_users.php  2023_07_12_010302_create_anime_user_table.php  2023_07_12_021827_create_top_anime_table.php  2023_07_14_030137_modify_anime_table.php  2023_07_16_212256_add_more_titles_to_anime_table.php  2023_08_11_041445_add_username_to_users_table.php  2023_08_11_043413_add_additional_fields_to_anime.php
api-layer/routes/: api.php  web.php
apps/mobile-client/: Dockerfile  app.json  package.json
apps/web-client/: Dockerfile  package.json
lib/anime-service/: Dockerfile
lib/recommendation-engine-service/: README.md
lib/recommendation-service/: Dockerfile  pyproject.toml
lib/user-service/: .env.example  Dockerfile  docker-compose.yml
mobile-client/: package-lock.json
web-client/: package-lock.json
webapp/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
webapp/src/: index.css  main.tsx
webapp/src/components/: AnimeList.tsx  AnimeQueryFilters.tsx  AnimeTitle.tsx  Hero.tsx  NavBar.tsx  ScrollIndicator.tsx  SkeletonCard.tsx
(+30 files in other folders)
